feat(): movile review + slidedialog

--- a/AstroTracker/src/styles/customTheme.scss
+++ b/AstroTracker/src/styles/customTheme.scss
@@ -1,3 +1,4 @@
-@import './partials/variables';
-@import './partials/generals';
-@import './partials/overrides';
+// @import './partials/_mixins';
+@import './partials/_variables';
+@import './partials/_generals';
+@import './partials/_overrides';
