feat(): Add card list e legend.

--- a/AstroTracker/src/styles/partials/_overrides.scss
+++ b/AstroTracker/src/styles/partials/_overrides.scss
@@ -2,6 +2,7 @@
 @import './overrides/button';
 @import './overrides/card';
 @import './overrides/dialog';
+@import './overrides/divider';
 @import './overrides/inputswitch';
 @import './overrides/panel';
 @import './overrides/splitter';
