--- a/AstroTracker/src/styles/partials/overrides/_button.scss
+++ b/AstroTracker/src/styles/partials/overrides/_button.scss
@@ -7,6 +7,6 @@
   background-color: var(--color-grey-700);
 
   &.p-button-rounded {
-    border-radius: 15px
-  }
+    border-radius: 15px;
+  };
 };
